test/TestPhases/typechecker/invalid/returnCannotBeVoid.blc
activity rrr(a: bool) returns int8
    await true
    if a then
        return // ERROR!
    else // wait once more
        await true
    end
    await true //dead code
    return 8
end

@[EntryPoint]
activity start ()()
    run _ = rrr(true)
end